--- a/IT13015572.md
+++ b/IT13015572.md
@@ -1,54 +1,183 @@
-#LAB 1 , 2 , 3
-### ID number - IT13015572 ###
-### NAME      -M.K.K.S Peiris ##
-### Amazon username - kulunu
-##
-#SETUP WINDOWS SERVER #
-#
-###01 -Choose an Instance Type as t2.micro ![](http://i.imgur.com/xPqu4DH.jpg)
-###02 -Review Instance Launch ![](http://i.imgur.com/aQnHMHg.jpg)
-###03 -Create a key pair ![](http://i.imgur.com/zVKzRvY.jpg)
-###04 -Download key pair ![](http://i.imgur.com/N8O4HXp.jpg)
-###05 -Key pair txt ![](http://i.imgur.com/faMON0T.jpg)
-###06 -Launch Instance ![](http://i.imgur.com/F93jxVi.jpg)
-###07 -Launching ![](http://i.imgur.com/PKuV6B2.jpg)
-###08 -connect to Instance and get Password ![](http://i.imgur.com/PBipE2L.jpg)
-###09 -Add key pair and generate password![](http://i.imgur.com/jgfgGUm.jpg)
-###10 -Download Remote desktop file![](http://i.imgur.com/vOsDb30.jpg)
-###11 -connect using generated password![](http://i.imgur.com/LrudW3B.jpg)
-###12 -After connected to windows![](http://i.imgur.com/ObxFZjH.jpg)
-###13 -Terminate Instance![](http://i.imgur.com/wrp5bGY.jpg)
+#How to do vMotion Migration in vSphere client#
+#ESBPII - LAB 7#
 
-##
-#SETUP LINUX SERVER  **************************************************#
+----------
+
+###Name - M.K.K.S Peiris###
+###IT Number - IT13015572###
 
 
-###01 -Choose an Instance Type ![](http://i.imgur.com/ePuNKHU.jpg)
-###02 -Review Instance Launch ![](http://i.imgur.com/BdMnsLt.jpg)
-###03 -Download Key Pair and Launch ![](http://i.imgur.com/TzQCHC7.jpg)
-###04 -Launch Status ![](http://i.imgur.com/mBlM1fZ.jpg)
-###05 -Launch Status ![](http://i.imgur.com/7VV9k56.jpg)
-###06 -Using "putty generator" convert .PEM file to PPK format.After that using "Putty configuration" connect to LINUX Instance.(ppk file add to "Putty configuration")  ![](http://i.imgur.com/a4rKcCF.jpg)
-###07 -Linux console![](http://i.imgur.com/ILq7hkO.jpg)
-###08 -Linux Console![](http://i.imgur.com/DMDYMzv.jpg)
+----------
 
+----------
 
-#SETUP SQL_RDS  **************************************************#
+# Outline#
+- Introduction
+- Virtual machine requirements for vMotion Migration
+- Hosts requirements for vMotion Migration
+- Identify CPU Characteristics
+- Compatibility requirements
+- vMotion Migration steps
 
+----------
+#Introduction#
+Vmotion VMware is a technology that enables the migration of virtual machines from one ESXi host to another host without losing service.
 
-###1 -Create a DB subnet Group ![](http://i.imgur.com/bQvn8Ye.jpg)
-###2 -Create a DB subnet Group ![](http://i.imgur.com/piBcOA7.jpg)
-###3 -ADD subnet IDs ![](http://i.imgur.com/OhYscTM.jpg)
-###4 - ![](http://i.imgur.com/igjhRk4.jpg)
-###5 -Creating a DB service ![](http://i.imgur.com/Ya5w4gA.jpg)
-###6 -Select MySQL from Engines ![](http://i.imgur.com/Yo2C22S.jpg)
-###7 -ADD DB details ![](http://i.imgur.com/HRX4KWK.jpg)
-###8 -Configuraion Advance setings ![](http://i.imgur.com/1A7TmBn.jpg)
-###9 -![](http://i.imgur.com/GCoDrGM.jpg)
-###10 -Create Security Group ![](http://i.imgur.com/rfbcFZg.jpg) 
-###11 -ADD rules ![](http://i.imgur.com/rnOySGZ.jpg)
-###12 -Edit DB service and add created security group ![](http://i.imgur.com/vKBuAZ1.jpg)
-###13 -ADD endpoint,USER name and password into MySql WorkBench ![](http://i.imgur.com/ulKo4Cg.jpg)
-###14 -Server Info ![](http://i.imgur.com/lC7Uo8k.jpg)
-###15 -Creating a Table ![](http://i.imgur.com/yaINPN9.jpg)
-###16 -ADD data into table ![](http://i.imgur.com/dIHYyPM.jpg)
+![](http://i.imgur.com/OLuh4oZ.png)
+
+A vMotion migration moves a powered-on virtual machine from one host to another.
+vMotion can be used to:
+
+- Improve overall hardware utilization.
+- Allow continued virtual machine operation while accomadating scheduled hardware downtime.
+- Allow vSphere Distributed Resource Scheduler (DRS) to balance virtual machines across hosts.
+
+![](http://i.imgur.com/GgtYdkc.png)
+
+#Virtual machine requirements for vMotion Migration#
+
+- A virtual machine must not thave a connection to a virtual device (such as a CD-ROM or floppy drive) with a local image mounted.
+- A virtual machine must not have a connection to an internal vSwitch(vSwitch with zero uplink adapters).
+- A virtual machine must not have CPU affinity configured.
+
+#Hosts requirements for vMotion Migration#
+
+- Visibility to all storage (Fibre Channel, iSCSI, or NAS)used by the virtual machine.
+- At least a Gigabyte Ethernet network:
+	- Four concurrent vMotion migrations on a 1Gbps network
+	- Eight concurrent vMotion migrations on a 10Gbps network
+- Access to the same physical networks.
+- Compatible CPUs.
+- To do vMotion Migration in one physical machine it need at least 12GB of RAM to run 2 seperate VMware EXSi baremetal hypervisors.
+
+#Identify CPU characteristics#
+
+One way to determine whether or not you have compatible CPUs is to use the vmware CPU identification utility which is downloadable from vmware. You can download that and so burn it onto a CD, pop that CD into each host one at a time and boot the host and you'll see a report as in following picture.
+
+![](http://i.imgur.com/8azvx1I.png)
+
+#Compatibility requirements#
+
+There are several methods which can be used to address vMotion CPU compatiblity requirements:
+
+- Procure servers with identical CPUs.
+- Compatibility masking in the vSphere client.
+- Enhanced vMotion Compatibility (EVC)
+	- Automatically masks off CPU incompatibility
+	- A feature of DRS clusters
+
+#vMotion Migration steps#
+
+Actions to be taken through vSphere Client connected to VirtualCenter.
+
+We connect to Virtual Center and gain access to one of the servers 2.
+
+We select the tab Configuration-> Network Adapters and we see that we have visibility of the new connections.
+
+![](http://i.imgur.com/CVFreDQ.png)
+
+Now we look at the tab Configuration-> Networking
+
+![](http://i.imgur.com/Sj72oiv.png)
+
+Click on Add Networking to create the vSwitch.
+
+![](http://i.imgur.com/RPahDUp.png)
+
+Select VMKernel and click on Next.
+
+![](http://i.imgur.com/fJhPiT5.png)
+
+Making a network card or cards that have connected from one server to another (in our case vmnic9) And click on Next.
+
+![](http://i.imgur.com/EFZnrfZ.png)
+
+We set Use this port group for vMotion.
+
+We wrote a Label Network different if you want (optional) and click on Next. We for example we put Vmotion.
+
+![](http://i.imgur.com/kBaVzf4.png)
+
+We set Use the following IP settings:
+
+- IP Address: 50.50.50.1
+- Subnet Mask: 255.255.255.252
+
+Click on Next.
+
+![](http://i.imgur.com/28v5cTz.png)
+
+Click on Finish.
+
+![](http://i.imgur.com/an8v0uq.png)
+
+We found that they have created a new virtual switch with Vmotion.
+
+We connect to another server involved.
+
+We select the tab Configuration-> Network Adapters and we see that we have visibility of the new connections.
+
+![](http://i.imgur.com/GS2cEoR.png)
+
+Now we look at the tab Configuration-> Networking
+
+![](http://i.imgur.com/ua4lchq.png)
+
+Click on Add Networking to create the vSwitch.
+
+![](http://i.imgur.com/O3NMVko.png)
+
+Select VMKernel and click on Next.
+
+![](http://i.imgur.com/5fE55IV.png)
+
+Making a network card or cards that have connected from one server to another (in our case vmnic9) And click on Next.
+
+![](http://i.imgur.com/lAtLFBM.png)
+
+We set Use this port group for VMotion.
+
+We wrote a Label Network different if you want (optional) and click on Next. We for example we put Vmotion.
+
+![](http://i.imgur.com/cvEDKmC.png)
+
+We set Use the following IP settings:
+
+- IP Address: 50.50.50.2 (This ip must be different from the server that we configured earlier 1).
+- Subnet Mask: 255.255.255.252 (Since we will use only 2 ip's).
+
+Click on Next.
+
+![](http://i.imgur.com/zNtkPHz.png)
+
+Click on Finish.
+
+And now what we will do to ensure that the entire system is working properly migrate a VM from one ESXi to the other using Vmotion functionality you just configured.
+
+We press the right mouse button on a virtual machine.
+
+![](http://i.imgur.com/7qTdkaJ.png)
+
+Click on Migrate.
+
+![](http://i.imgur.com/jVn91H5.png)
+
+Click on Next.
+
+![](http://i.imgur.com/B9qrhAs.png)
+
+Select the target server where we will move the virtual machine.
+
+Click on Next.
+
+![](http://i.imgur.com/GT8skf0.png)
+
+Click on Next.
+
+![](http://i.imgur.com/8HGdTSP.png)
+
+Click on Finish to start the migration.
+
+![](http://i.imgur.com/sS69GH9.png)
+
+Perfect the system has been migrated from an ESXi host to another without losing the service and in just 47 seconds, if we set up another network card this time has reduced considerably, as we have said before Vmotion is able to use multiple cards network for migration.
